add new users service

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,10 @@
   },
   "rules": {
     "no-console": "off",
-    "linebreak-style": 0
+    "linebreak-style": 0,
+    "no-underscore-dangle": 0,
+    "comma-dangle": "off",
+    "operator-linebreak": ["error", "after"],
+    "implicit-arrow-linebreak": ["error", "below", "beside"]
   }
 }
